Tiny fixes and improved instructions.